cmake_minimum_required(VERSION 3.17)
project(code C)

set(CMAKE_C_STANDARD 11)

add_executable(001 001_while判断回文数_倒序一个整数.c)
add_executable(002 002_求菲波拉契数列第n项.c)
add_executable(003 003_scanf存在的问题与strtol的使用.c)
add_executable(004 004_指针_互换两个数字_注意事项.c)
add_executable(005 005_一维数组.c)
add_executable(006 006_动态内存分配_malloc函数.c)
add_executable(007 007_动态构造一维数组.c)
add_executable(008 008_动态分配内存跨函数使用.c)
add_executable(009 009_冒泡排序.c)
add_executable(010 010_枚举.c)
add_executable(011 011_链表.c)
