find_package(Threads REQUIRED)
add_subdirectory(OldCxx)

target_link_libraries(exampleOld1 Threads::Threads)
target_link_libraries(exampleOld2 Threads::Threads)
target_link_libraries(exampleOld3 Threads::Threads)
target_link_libraries(exampleOld4 Threads::Threads)


add_subdirectory(Cxx11Later)
target_link_libraries(01 Threads::Threads)
target_link_libraries(02 Threads::Threads)
target_link_libraries(03 Threads::Threads)
target_link_libraries(04 Threads::Threads)
target_link_libraries(05 Threads::Threads)
target_link_libraries(06 Threads::Threads)
target_link_libraries(07 Threads::Threads)
target_link_libraries(08 Threads::Threads)
target_link_libraries(09 Threads::Threads)
target_link_libraries(10 Threads::Threads)
target_link_libraries(11 Threads::Threads)
target_link_libraries(12 Threads::Threads)

add_subdirectory(多线程示例代码)
target_link_libraries(001 Threads::Threads)
target_link_libraries(002 Threads::Threads)
target_link_libraries(003 Threads::Threads)
target_link_libraries(004 Threads::Threads)
target_link_libraries(005 Threads::Threads)
target_link_libraries(006 Threads::Threads)
target_link_libraries(007 Threads::Threads)
target_link_libraries(008 Threads::Threads)
target_link_libraries(009 Threads::Threads)