set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

add_executable(01 01_basic.cpp)
add_executable(02 02_线程管理.cpp)
add_executable(03 03_数据竞争与互斥对象.cpp)
add_executable(04 04_死锁.cpp)
add_executable(05 05_Unique_Lock.cpp)
add_executable(06 06_Lazy_Initialization.cpp)
add_executable(07 07_条件变量.cpp)
add_executable(08 08_Future和async.cpp)
add_executable(09 09_Promise和async.cpp)
add_executable(10 10_可调用对象.cpp)
add_executable(11 11_packaged_task.cpp)
add_executable(12 12_等待.cpp)
